# airtimesocial

./: build.sh  db.sqlite3  pyproject.toml
airtime/: urls.py  views.py
core/: settings.py  urls.py
