[tool.poetry]
name = "airtimesocial"
version = "0.1.0"
description = ""
authors = ["Surdma <oladejosodiq@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
python-decouple = "^3.7"
python-dotenv = "^0.21.1"
whitenoise = "^6.3.0"
africastalking = "^1.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
